# SingleLevel_IOC

./: README.md  pyproject.toml
src/singlelevel_ioc/2Dimensions/: Becanovic_2024.py  Becanovic_2024_func.py  Becanovic_2024_plot.py
src/singlelevel_ioc/3Dimension/: Becanovic_2024_3D.py  Becanovic_2024_Arm.py  Becanovic_2024_func3D.py  Becanovic_2024_plot3D.py
src/singlelevel_ioc/PinocchioImplementation/: README.md  casadi_fun.py  main.py
