[project]
authors = [{name = "Oceane Dbs", email = "oceane.tribudubois@gmail.com"}]
dependencies = []
name = "SingleLevel_IOC"
requires-python = ">= 3.11"
version = "0.1.0"

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[tool.pixi.workspace]
channels = ["conda-forge"]
platforms = ["linux-64"]

[tool.pixi.pypi-dependencies]
singlelevel_ioc = { path = ".", editable = true }

[tool.pixi.tasks]

[tool.pixi.dependencies]
numpy = ">=2.3.4,<3"
matplotlib = ">=3.10.7,<4"
casadi = ">=3.7.0,<4"
scipy = ">=1.16.3,<2"
roboticstoolbox-python = ">=1.1.1,<2"
sympy = ">=1.14.0,<2"
qpsolvers = ">=4.8.1,<5"
pinocchio = ">=3.8.0,<4"
gepetto-viewer = ">=6.1.0,<7"
gepetto-viewer-corba = ">=6.1.0,<7"
time = ">=1.9,<2"
